--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
                   </div>
   
                   <div class="form-group" >
-                    <input style="width: 100%;" type="number" name="TEMPERATURE-(°C)" placeholder="AVG-TEMP" class="form-control-input" required="required" />
+                    <input style="width: 100%;" type="number" name="TEMPERATURE-(°C)" placeholder="TEMPERATURE-(°C)" class="form-control-input" required="required" />
                     <div class="help-block with-errors"></div>
                   </div>
   
